TODOリストの課題完了

--- a/03_collections/todo.ipynb
+++ b/03_collections/todo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "1a603969",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1: 1\n",
-      "2: 2\n",
-      "3: 3\n",
-      "4: 4\n",
+      "0. 英語の勉強\n",
+      "1. 切手を買う\n",
+      "無効な番号です。\n",
+      "0. 切手を買う\n",
       "TODOリストを保存して終了します。\n"
      ]
     }
@@ -27,14 +27,20 @@
     "    todo_list = []\n",
     "\n",
     "while True:\n",
-    "    action = input(\"番号を入力してください[1: 追加, 2: 表示, 4: 保存と終了]\")\n",
+    "    action = input(\"番号を入力してください[1: 追加, 2: 表示, 3: 削除, 4: 保存と終了]\")\n",
     "    match action:\n",
     "        case \"1\":\n",
     "            item = input(\"追加するTODO:\")\n",
     "            todo_list.append(f\"{item}\")\n",
     "        case \"2\":\n",
-    "            for i, item in enumerate(todo_list, start=1):\n",
-    "                print(f\"{i}: {item}\")\n",
+    "            for i, item in enumerate(todo_list):\n",
+    "                print(f\"{i}. {item}\")\n",
+    "        case \"3\":\n",
+    "            try:\n",
+    "                item_number = input(\"削除する番号:\")\n",
+    "                removed_item = todo_list.pop(int(item_number))\n",
+    "            except (ValueError, IndexError):\n",
+    "                print(\"無効な番号です。\")\n",
     "        case \"4\":\n",
     "            print(\"TODOリストを保存して終了します。\")\n",
     "            with open(\"todo_list.txt\", \"w\", encoding=\"utf-8\") as file:\n",
